--- a/scss/_toc.scss
+++ b/scss/_toc.scss
@@ -149,4 +149,13 @@
             }
         }
     }
+
+    .lia-slide-animation {
+      margin-left: 4px;
+      padding-left: 5px;
+      margin-right: 4px;
+      padding-right: 5px;
+      overflow-y: auto;
+      transition: max-height 0.2s ease-out;
+    }
 }
