--- a/scss/_controls.scss
+++ b/scss/_controls.scss
@@ -106,6 +106,14 @@
         font-family: "Roboto Mono";
         font-size: map-get($config, code-size);
 
+        .lia-accordion-min-max {
+            padding-right: 3px;
+            padding-left: 3px;
+            .active, &:hover {
+                background-color: mix($bg, $fg, 50%);
+            }
+        }
+
         .active, &:hover {
             background-color: mix($bg, $fg, 80%);
         }
@@ -114,8 +122,9 @@
           content: '\2212';
           color: $fg;
           font-weight: bold;
-          float: right;
-          margin-left: 5px;
+          float: left;
+          //margin-left: 5px;
+          margin-right: 5px;
         }
 
         &.active:after {
