--- a/scss/_controls.scss
+++ b/scss/_controls.scss
@@ -135,6 +135,27 @@
 
     }
 
+    .lia-accordion-dummy {
+        $bg: map-get($theme, primary);
+        $fg: map-get($theme, background);
+        $rd: map-get($config, spacing-small);
+
+        background-color: $bg;
+        color: $fg;
+        cursor: auto;
+        padding: 6px;
+        width: 100%;
+        border: none;
+        text-align: left;
+        outline: none;
+        font-size: 15px;
+        border-top-left-radius: $rd;
+        border-top-right-radius: $rd;
+        transition: 0.4s;
+        font-family: "Roboto Mono";
+        font-size: map-get($config, code-size);
+    }
+
     .lia-code-stdout {
         font-family: "Roboto Mono";
         background: #111;
