--- a/scss/_lia.scss
+++ b/scss/_lia.scss
@@ -57,7 +57,17 @@
         }
 
         .lia-icon {
-          @include material-icon("", inherit);
+            @include material-icon("", inherit);
+
+            &.rotating {
+                -webkit-animation: spin 1s linear infinite;
+                -moz-animation: spin 1s linear infinite;
+                animation: spin 1s linear infinite;
+
+                @-moz-keyframes spin { 100% { -moz-transform: rotate(-360deg); } }
+                @-webkit-keyframes spin { 100% { -webkit-transform: rotate(-360deg); } }
+                @keyframes spin { 100% { -webkit-transform: rotate(-360deg); transform:rotate(-360deg); } }
+            }
         }
     }
 }
