--- a/src/scss/_controls.scss
+++ b/src/scss/_controls.scss
@@ -604,6 +604,10 @@
       color: $fg;
       margin: map-get($config, spacing-huge) map-get($config, spacing-normal);
       padding: map-get($config, spacing-large);
+
+      //todo add shadow with changeing colors according to dark and light...
+      //border-radius: 5px;
+      //box-shadow: 8px 7px 0px #eee;
     }
 
     .lia-toolbar {
