select quiz added

--- a/src/scss/_controls.scss
+++ b/src/scss/_controls.scss
@@ -222,8 +222,46 @@
         background-color: #673ab7;
         color: #333;
       }
-
     }
+
+    .lia-dropdown {
+      padding: map-get($config, spacing-small);
+      border-radius: 2px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
+      min-width: 70px;
+      display: inline-block;
+      cursor: pointer;
+      border-width: 0.5px;
+      border-style: solid;
+
+      border-color: map-get($theme, primary);
+    }
+
+    .lia-dropdown-options {
+      position: absolute;
+      overflow: auto;
+      transition: all 0.1s ease 0s;
+      cursor: pointer;
+
+      border-radius: 2px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
+      z-index: 1;
+    }
+
+    .lia-dropdown-option {
+      //min-width: 70px;
+      padding: map-get($config, spacing-small);
+
+      min-width: 70px;
+      border-width: 0.5px;
+      border-style: solid;
+
+      border-color: map-get($theme, primary);
+      background-color: map-get($theme, background);
+    }
+
 
     .lia-tooltip {
       position: relative;
