added white background to charts, so that visible in dark mode

--- a/src/scss/_slide.scss
+++ b/src/scss/_slide.scss
@@ -43,7 +43,7 @@
         .lia-svg {
             $horiz: map-get($config, spacing-normal);
 
-            //background-color: $bg;
+            background-color: white;
             padding-left: $horiz;
             padding-right: $horiz;
             overflow: auto;
