--- a/src/scss/_slide.scss
+++ b/src/scss/_slide.scss
@@ -58,37 +58,27 @@
             padding: $vert $horiz;
             overflow: auto;
 
-            .lia-effect-comment-toc {
-                $bg: mix(map-get($theme, background), map-get($theme, primary), 80%);
+            .lia-effect {
+                animation: fadein 2s;
+                -moz-animation: fadein 2s; /* Firefox */
+                -webkit-animation: fadein 2s; /* Safari and Chrome */
+                -o-animation: fadein 2s; /* Opera */
 
-                position: fixed;
-                left: map-get($config, spacing-huge) + map-get($config, toc-width);
-                right: map-get($config, spacing-huge);
-                bottom: map-get($config, spacing-huge);
-                padding: map-get($config, spacing-large);
-                background: rgba($bg, .7);
-                color: color-contrast($bg);
-                animation: show-comment .25s ease-in-out 0s;
-
-                p {
-                    margin: 0;
+                @keyframes fadein {
+                  from { opacity:0; }
+                  to   { opacity:1; }
                 }
-            }
-
-            .lia-effect-comment {
-                $bg: mix(map-get($theme, background), map-get($theme, primary), 80%);
-
-                position: fixed;
-                left: map-get($config, spacing-huge);
-                right: map-get($config, spacing-huge);
-                bottom: map-get($config, spacing-huge);
-                padding: map-get($config, spacing-large);
-                background: rgba($bg, .7);
-                color: color-contrast($bg);
-                animation: show-comment .25s ease-in-out 0s;
-
-                p {
-                    margin: 0;
+                @-moz-keyframes fadein { /* Firefox */
+                  from { opacity:0; }
+                  to   { opacity:1; }
+                }
+                @-webkit-keyframes fadein { /* Safari and Chrome */
+                  from { opacity:0; }
+                  to   { opacity:1; }
+                }
+                @-o-keyframes fadein { /* Opera */
+                  from { opacity:0; }
+                  to   { opacity:1; }
                 }
             }
 
