Correctly size the logo image and dont abuse lia-spacer

--- a/src/scss/_controls.scss
+++ b/src/scss/_controls.scss
@@ -690,6 +690,11 @@
             }
         }
 
+        .lia-logo {
+            background: transparent;
+            max-width: 10%;
+        }
+
         .lia-left {
             order: 1;
         }
