--- a/src/scss/_controls.scss
+++ b/src/scss/_controls.scss
@@ -603,6 +603,9 @@
         border-radius: 2px;
         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
+        min-width: 80%;
+
+
         .lia-check-item,
         .lia-radio-item,
         .lia-survey-matrix {
