overlong tables are now scrollable

--- a/src/scss/_controls.scss
+++ b/src/scss/_controls.scss
@@ -568,6 +568,8 @@
 
 
         border-collapse: collapse;
+        overflow-x: auto;
+        display: block;
 
         .lia-table-head {
             th {
