--- a/src/scss/_controls.scss
+++ b/src/scss/_controls.scss
@@ -71,6 +71,37 @@
         transition: max-height 0.5s ease-out;
     }
 
+    .lia-script {
+        background: mix(map-get($theme, background), #888, 60%);
+        padding: 2px 6px 2px 6px;
+        border-radius: 10px;
+    }
+
+    .lia-script-with-border {
+        background: mix(map-get($theme, background), #888, 80%);
+        border: 1px solid map-get($theme, primary);
+        padding: 2px 6px 2px 6px;
+        border-radius: 10px;
+
+        &:hover {
+            border: 2px solid map-get($theme, primary);
+            margin-left: -1px;
+            margin-right: -1px;
+        }
+    }
+
+    .lia-script-border {
+        border: 1px solid map-get($theme, primary);
+        padding: 2px 6px 2px 6px;
+        border-radius: 10px;
+
+        &:hover {
+            border: 2px solid map-get($theme, primary);
+            margin-left: -1px;
+            margin-right: -1px;
+        }
+    }
+
     .headless {
         border-top-left-radius: map-get($config, spacing-small);
         border-top-right-radius: map-get($config, spacing-small);
