--- a/src/scss/_controls.scss
+++ b/src/scss/_controls.scss
@@ -683,8 +683,8 @@
 
       //todo add shadow with changeing colors according to dark and light...
       border-radius: 5px;
-      //box-shadow: 8px 7px 0px #eee;
-      display: inline-block;
+      box-shadow: 8px 7px 0px #eee;
+      //display: inline-block;
     }
 
     .lia-toolbar {
