code element will preserve whitespaces now

--- a/src/scss/_controls.scss
+++ b/src/scss/_controls.scss
@@ -69,6 +69,7 @@
         overflow-x: auto;
         margin: 0px;
         transition: max-height 0.5s ease-out;
+        white-space: pre;
     }
 
     .lia-script {
