--- a/src/scss/_controls.scss
+++ b/src/scss/_controls.scss
@@ -70,6 +70,7 @@
         margin: 0px;
         //transition: max-height 0.5s ease-out;
         white-space: pre-wrap;
+        word-spacing: normal;
     }
 
     .lia-script {
