--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,3 +4,6 @@
 @import "_themes/purple";
 @import "_themes/grey";
 @import "_themes/blue";
+@import "_themes/turquoise";
+@import "_themes/red";
+@import "_themes/yellow";
