--- a/src/scss/_themes/_yellow.scss
+++ b/src/scss/_themes/_yellow.scss
@@ -1,16 +1,16 @@
 @import "material";
 @import "lia";
 
-$fg: material-color('blue-grey', '900');
-$bg: material-color('blue-grey', '50');
+$fg: material-color('grey', '900');
+$bg: material-color('grey', '50');
 
 $theme: (
     text: $fg,
     text-inv: $bg,
     background: $bg,
     background-inv: $fg,
-    primary: $color-blue-1,
-    secondary: $color-blue-2,
+    primary: $color-yellow-1,
+    secondary: $color-yellow-2,
     success: $color-success,
     info: material-color('blue', '500'),
     warning: $color-warning,
@@ -18,4 +18,4 @@ $theme: (
     highlight-weight: normal,
 );
 
-@include create-theme($theme, blue);
+@include create-theme($theme, yellow);
