--- a/src/scss/_lia.scss
+++ b/src/scss/_lia.scss
@@ -1,102 +1,72 @@
-@import "colors";
-@import "config";
-@import "color";
-@import "flex";
-@import "material";
-@import "toc";
+
 @import "slide";
 @import "plain";
 @import "controls";
 
-@mixin create-theme($theme, $theme-name) {
-    $dark: (
-        text: map-get($theme, text-inv),
-        text-inv: map-get($theme, text),
-        background: map-get($theme, background-inv),
-        background-inv: map-get($theme, background),
-        primary: map-get($theme, primary),
-        secondary: map-get($theme, secondary),
-        success: map-get($theme, success),
-        info: map-get($theme, info),
-        warning: map-get($theme, warning),
-        error: map-get($theme, error),
-        highlight-weight: map-get($theme, highlight-weight),
-    );
+//@mixin create-theme($theme, $theme-name) {
+//  $dark: (
+//          text: map-get($theme, text-inv),
+//          text-inv: map-get($theme, text),
+//          background: map-get($theme, background-inv),
+//          background-inv: map-get($theme, background),
+//          primary: map-get($theme, primary),
+//          secondary: map-get($theme, secondary),
+//          success: map-get($theme, success),
+//          info: map-get($theme, info),
+//          warning: map-get($theme, warning),
+//          error: map-get($theme, error),
+//          highlight-weight: map-get($theme, highlight-weight),
+//  );
+//
+//
+//  .lia-variant-light {
+//    @include _new-theme($theme, $theme-name);
+//  }
+//
+//  .lia-variant-dark {
+//    @include _new-theme($dark, $theme-name);
+//  }
+//
+//  .lia-icon {
+//    @include material-icon("", inherit);
+//
+//    &.rotating {
+//      -webkit-animation: spin 1s linear infinite;
+//      -moz-animation: spin 1s linear infinite;
+//      animation: spin 1s linear infinite;
+//
+//      @-moz-keyframes spin {
+//        100% {
+//          -moz-transform: rotate(-360deg);
+//        }
+//      }
+//      @-webkit-keyframes spin {
+//        100% {
+//          -webkit-transform: rotate(-360deg);
+//        }
+//      }
+//      @keyframes spin {
+//        100% {
+//          -webkit-transform: rotate(-360deg);
+//          transform: rotate(-360deg);
+//        }
+//      }
+//    }
+//  }
+//
+//}
 
-    @keyframes show-comment {
-        $left: map-get($config, spacing-huge) + map-get($config, toc-width);
-        $right: map-get($config, spacing-huge);
-
-        from {
-            left: calc(100% + #{$left});
-            right: calc(#{$right} - 100%);
-        }
-        to {
-            left: $left;
-            right: $right;
-        }
-    }
-
-    html, body {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        font-family: "Roboto";
-        overflow: hidden;
-
-        * {
-            box-sizing: border-box;
-        }
-
-        .lia-variant-light {
-            @include _new-theme($theme, $theme-name);
-        }
-
-        .lia-variant-dark {
-            @include _new-theme($dark, $theme-name);
-        }
-
-        .lia-icon {
-            @include material-icon("", inherit);
-
-            &.rotating {
-                -webkit-animation: spin 1s linear infinite;
-                -moz-animation: spin 1s linear infinite;
-                animation: spin 1s linear infinite;
-
-                @-moz-keyframes spin { 100% { -moz-transform: rotate(-360deg); } }
-                @-webkit-keyframes spin { 100% { -webkit-transform: rotate(-360deg); } }
-                @keyframes spin { 100% { -webkit-transform: rotate(-360deg); transform:rotate(-360deg); } }
-            }
-        }
-    }
-}
-
-@mixin _new-theme($theme, $theme-name) {
-    &.lia-canvas.lia-theme-#{"" + $theme-name} {
-        $bg: map-get($theme, background);
-        $fg: color-contrast($bg);
-
-        @include flex(row, nowrap, flex-start, stretch, stretch);
-        background: $bg;
-        color: $fg;
-        width: 100%;
-        height: 100%;
-
-        .lia-toc {
-            order: 1;
-        }
-
-        .lia-slide,
-        .lia-plain {
-            order: 2;
-            flex: 1 1 auto;
-        }
-
-        @include toc($theme);
-        @include slide($theme);
-        @include plain($theme);
-        @include controls($theme);
-    }
-}
+//@mixin _new-theme($theme, $theme-name) {
+//  &.lia-theme-#{"" + $theme-name} {
+//    $bg: map-get($theme, background);
+//    $fg: color-contrast($bg);
+//
+//    background: $bg;
+//    color: $fg;
+//
+//    @include toc($theme);
+//    @include slide($theme);
+//    @include plain($theme);
+//    @include controls($theme);
+//  }
+//}
