--- a/src/scss/settings/_settings.base.scss
+++ b/src/scss/settings/_settings.base.scss
@@ -1,4 +1,4 @@
-$config: (
+$global-spacing: (
     spacing-huge: 2em,
     spacing-large: 1em,
     spacing-normal: 0.5em,
@@ -10,3 +10,12 @@ $config: (
     toc-width: 16.5em,
     code-size: 0.9em,
 );
+
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
