[T001TULIA-14] #CHANGE 'scope:scss-refactor' <F024FEIN-19>

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,29 +4,42 @@
 @import "settings/settings.fonts";
 @import "settings/settings.animations";
 
-
 // Tools
 @import "tools/tools.color";
 @import "tools/tools.flex";
-
-
-
-@import "settings/settings.theme";
-
-
 
 // Generics
 @import "generic/generic.reset";
 
 // Elements
+@import "elements/elements.button";
+@import "elements/elements.code";
+@import "elements/elements.input";
+@import "elements/elements.label";
+@import "elements/elements.link";
+@import "elements/elements.select";
+@import "elements/elements.table";
+@import "elements/elements.textarea";
+
+@import "elements/element.html";
+@import "elements/element.headline";
 
 // Objects
 @import "objects/object.layout";
 
 // Components
-@import "components/components.button";
+@import "components/components.accordion";
+@import "components/components.card";
+@import "components/components.dropdown";
+@import "components/components.quote";
+@import "components/components.script";
+@import "components/components.toolbar";
 @import "components/components.toc";
+@import "components/components.slide";
+@import "components/components.slide-animation";
 
 // Utilities
+@import "utilities/utilities.headless";
 
-
+// Themes
+@import "themes";
