--- a/src/scss/settings/_settings.animations.scss
+++ b/src/scss/settings/_settings.animations.scss
@@ -1,7 +1,13 @@
-
+@keyframes spin {
+  100% {
+    -webkit-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
+}
 
 @keyframes show-comment {
-  $left: map-get($global-spacing, spacing-huge) + map-get($global-spacing, toc-width);
+  $left: map-get($global-spacing, spacing-huge) +
+    map-get($global-spacing, toc-width);
   $right: map-get($global-spacing, spacing-huge);
 
   from {
