--- a/src/scss/settings/_settings.fonts.scss
+++ b/src/scss/settings/_settings.fonts.scss
@@ -2,7 +2,7 @@
 
 @mixin material-icon($icon: "", $size: 24px) {
   content: "#{$icon}";
-  font-family: 'Material Icons';
+  font-family: "Material Icons";
   font-weight: normal;
   font-style: normal;
   font-size: $size;
@@ -23,9 +23,9 @@
   -moz-osx-font-smoothing: grayscale;
 
   /* Support for IE. */
-  font-feature-settings: 'liga';
+  font-feature-settings: "liga";
 }
 
 body {
-  font-family: "Roboto";
+  font-family: $global-font;
 }
