[T001TULIA-14] #CHANGE 'scope:scss-refactor' <T001TULIA-19>

--- a/src/scss/elements/_elements.label.scss
+++ b/src/scss/elements/_elements.label.scss
@@ -4,6 +4,9 @@
 
   padding: $vert 0;
   margin: $marg;
+  word-wrap: normal;
+  word-break: keep-all;
+  white-space: pre-wrap;
 }
 
 .lia-labeled {
