--- a/src/scss/utilities/_utilities.headless.scss
+++ b/src/scss/utilities/_utilities.headless.scss
@@ -1,4 +1,4 @@
 .headless {
-  border-top-left-radius: map-get($global-spacing, spacing-small);
-  border-top-right-radius: map-get($global-spacing, spacing-small);
+  border-top-left-radius: map-get($global-spacing, spacing-small) !important;
+  border-top-right-radius: map-get($global-spacing, spacing-small) !important;
 }
