[T001TULIA-14] #CHANGE 'scope:scss-refactor' <T001TULIA-19>

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,7 +23,7 @@
 @import "elements/elements.textarea";
 
 // Objects
-@import "objects/object.layout";
+@import "objects/object.canvas";
 
 // Components
 @import "components/components.accordion";
