chore: Add parcel2-bundler support
This seems to work finally. It removes some dependecy security problems
and results in smaller assets. The drawback at the moment is that all
main filenames now start with "index.hash..."

--- a/src/scss/_themes/_amber.scss
+++ b/src/scss/_themes/_amber.scss
@@ -1,5 +1,5 @@
-@import "material";
-@import "lia";
+@import "../../../node_modules/material-icons/css/material-icons";
+@import "../lia";
 
 $fg: material-color('grey', '900');
 $bg: material-color('grey', '50');
