--- a/src/scss/_themes/_grey.scss
+++ b/src/scss/_themes/_grey.scss
@@ -1,5 +1,5 @@
-@import "material";
-@import "lia";
+@import "../../../node_modules/material-icons/css/material-icons";
+@import "../lia";
 
 $fg: material-color('grey', '900');
 $bg: material-color('grey', '50');
