--- a/src/scss/elements/_elements.headline.scss
+++ b/src/scss/elements/_elements.headline.scss
@@ -1,38 +1,72 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 500;
-}
+/* --------------------------------------------------
+   Headline Settings
+   -------------------------------------------------- */
+
+/*
+ * TODO: h1 für Darstellungsmodi (Presentation, Slides, Textbook) anpassen  
+ */
+$h1-desktop-presentation: 4rem;
+$h1-desktop-slide: 4rem;
+$h1-desktop-textbook: 3.7rem;
+$h1-mobile: 2.3rem;
+
+$h2-desktop: 2.9rem;
+$h2-mobile: 2rem;
+
+$h3-desktop: 2.3rem;
+$h3-mobile: 1.8rem;
+
+$h4-desktop: 1.6rem;
+$h4-mobile: 1.6rem;
+
+/* --------------------------------------------------
+   Headlines
+   -------------------------------------------------- */
 
 h1,
-.lia-h1 {
-  font-size: 200%;
+h2,
+h3 {
+  font-family: $global-font-headline;
+  line-height: normal;
+}
+
+h4 {
+  font-family: $global-font-text;
+  line-height: 1.38;
+}
+
+h1,
+.u-h1 {
+  font-size: $h1-mobile;
+
+  @include breakpoint("m") {
+    font-size: $h1-desktop-presentation;
+  }
 }
 
 h2,
-.lia-h2 {
-  font-size: 175%;
+.u-h2 {
+  font-size: $h2-mobile;
+
+  @include breakpoint("m") {
+    font-size: $h2-desktop;
+  }
 }
 
 h3,
-.lia-h3 {
-  font-size: 150%;
+.u-h3 {
+  font-size: $h3-mobile;
+
+  @include breakpoint("m") {
+    font-size: $h3-desktop;
+  }
 }
 
 h4,
-.lia-h4 {
-  font-size: 125%;
-}
+.u-h4 {
+  font-size: $h4-mobile;
 
-h5,
-.lia-h5 {
-  font-size: 110%;
-}
-
-h6,
-.lia-h6 {
-  font-size: 105%;
+  @include breakpoint("m") {
+    font-size: $h4-desktop;
+  }
 }
