--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,7 @@
 @import "settings/settings.colors";
 @import "settings/settings.fonts";
 @import "settings/settings.global";
+@import "settings/settings.typography";
 @import "settings/settings.animations";
 
 // Tools
