--- a/src/scss/elements/_elements.button.scss
+++ b/src/scss/elements/_elements.button.scss
@@ -1,22 +1,15 @@
 .lia-btn {
-  $vert: map-get($global-spacing, spacing-small);
-  $marg: map-get($global-spacing, spacing-normal);
-
-  padding: $vert 0;
-  margin: $marg;
   border: none;
-  border-radius: map-get($global-spacing, spacing-smaller);
-  outline: none;
-  position: relative;
-  overflow: hidden;
-  transition: background 0.25s ease-in 0s;
-  padding: 0 map-get($global-spacing, spacing-normal);
-  line-height: 2em;
+  display: inline-block;
+  line-height: $global-line-height;
+  padding: 0.5rem 1rem;
 
-  &:not([disabled]) {
-    &:hover {
-      cursor: pointer;
-    }
+  &--rounded {
+    border-radius: $global-radius;
+  }
+
+  &--outline {
+    background-color: transparent;
   }
 
   &--hint {
@@ -25,10 +18,10 @@
     vertical-align: middle;
   }
 
-  .lia-ripple {
+/*   .lia-ripple {
     position: absolute;
     display: block;
-    border-radius: 50%;
+    border-radius: 50%;‚
     width: 0;
     height: 0;
     margin: 0;
@@ -37,7 +30,7 @@
     transition-duration: 0.5s;
     transition-timing-function: ease-out;
     transition-delay: 0s;
-  }
+  } */
 }
 
 @mixin style-btn($theme) {
@@ -48,8 +41,6 @@
     &:not([disabled]) {
       background: $bg;
       color: $fg;
-      box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
-        0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 
       &:hover {
         background: mix($bg, $fg, 80%);
@@ -65,66 +56,6 @@
 
       background: rgba($fg, 0.12);
       color: rgba($fg, 0.38);
-    }
-
-    &:active {
-      box-shadow: -1px -1px 1px #fff;
-    }
-
-    .lia-ripple {
-      background: $fg;
-    }
-
-    &.lia-selected {
-      box-shadow: -1px -1px 1px #000;
-    }
-
-    &.lia-success {
-      $bg: map-get($theme, success);
-      $fg: color-contrast($bg);
-
-      background: $bg;
-      color: $fg;
-
-      &:hover {
-        background: mix($bg, $fg, 80%);
-      }
-
-      .lia-ripple {
-        background: $fg;
-      }
-    }
-
-    &.lia-warning {
-      $bg: map-get($theme, warning);
-      $fg: color-contrast($bg);
-
-      background: $bg;
-      color: $fg;
-
-      &:hover {
-        background: mix($bg, $fg, 80%);
-      }
-
-      .lia-ripple {
-        background: $fg;
-      }
-    }
-
-    &.lia-failure {
-      $bg: map-get($theme, error);
-      $fg: color-contrast($bg);
-
-      background: $bg;
-      color: $fg;
-
-      &:hover {
-        background: mix($bg, $fg, 80%);
-      }
-
-      .lia-ripple {
-        background: $fg;
-      }
     }
   }
 }
