--- a/src/scss/objects/_object.canvas.scss
+++ b/src/scss/objects/_object.canvas.scss
@@ -1,16 +1,7 @@
 .lia-canvas {
-  @include flex(row, nowrap, flex-start, stretch, stretch);
-
-  width: 100%;
-  height: 100%;
-
-  .lia-toc {
-    order: 1;
-  }
-
-  .lia-slide,
-  .lia-plain {
-    order: 2;
-    flex: 1 1 auto;
-  }
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  max-width: 2560px;
+  margin: 0 auto;
 }
