--- a/src/scss/components/_components.slide.scss
+++ b/src/scss/components/_components.slide.scss
@@ -4,14 +4,10 @@
   width: 100%;
 
   .lia-footer {
-    $horiz: map-get($global-spacing, spacing-normal);
-    padding-left: $horiz;
-    padding-right: $horiz;
-    max-height: 40%;
-    min-height: 52px;
-    min-width: 320px;
-    overflow: auto;
-    border-top: map-get($global-spacing, spacing-small) solid;
+    display: flex;
+    padding: 1rem 0;
+    align-items: center;
+    margin-top: 1rem;
   }
 
   .lia-svg {
@@ -22,12 +18,7 @@
   }
 
   .lia-content {
-    $horiz: map-get($global-spacing, spacing-huge);
-    $vert: map-get($global-spacing, spacing-large);
-
-    position: relative;
-    flex: 1 1 auto;
-    padding: $vert $horiz;
+    padding: 1rem 0;
     overflow: auto;
     min-width: 320px;
 
@@ -121,12 +112,7 @@
 @mixin style-slide($theme) {
   .lia-slide {
     .lia-footer {
-      $bg: map-get($theme, background);
-      $fg: color-contrast($bg);
-      $horiz: map-get($global-spacing, spacing-normal);
-
-      background: mix($bg, $fg, 95%);
-      border-top-color: mix($fg, $bg, 20%);
+      //
     }
 
     .lia-svg {
