--- a/src/scss/elements/_elements.textarea.scss
+++ b/src/scss/elements/_elements.textarea.scss
@@ -1,7 +1,7 @@
 .lia-textarea {
-  width: 100%;
+  max-width: 100%;
+    width: 100%;
   border: none;
-  outline: none;
   transition: border-bottom-color 0.5s ease-out 0s;
 
   &:not([disabled]) {
