--- a/src/scss/settings/_settings.global.scss
+++ b/src/scss/settings/_settings.global.scss
@@ -16,6 +16,7 @@ $global-spacing: (
    UI treatments
    -------------------------------------------------- */
 
+$global-border: 1px solid $color-lightgrey;
 $global-radius: 8px !default;
 $global-outline: 3px !default;
 $global-transition: all 300ms ease-in-out !default;
@@ -32,3 +33,4 @@ $global-line-height: 1.47 !default;
 $global-font-text: "LiaSourceSansPro";
 $global-font-mono: "LiaSourceCodePro";
 $global-font-headline: "LiaSourceSerifPro";
+
