[T001TULIA-14] #CHANGE 'scope: framework' <T001TULIA-18>

--- a/src/scss/00_settings/_settings.colors.scss
+++ b/src/scss/00_settings/_settings.colors.scss
@@ -64,3 +64,5 @@ $color-warning: $color-yellow;
 // success
 $color-green: #8cc96f;
 $color-success: $color-green;
+
+$color-text: $color-anthracite;
