--- a/src/scss/00_settings/_settings.typography.scss
+++ b/src/scss/00_settings/_settings.typography.scss
@@ -6,7 +6,7 @@ body {
   font-size: $global-font-size;
   font-weight: 400;
   line-height: $global-line-height;
-  color: #4b4b4b;
+  color: $color-text;
 }
 
 body,
