--- a/src/scss/04_objects/_object.canvas.scss
+++ b/src/scss/04_objects/_object.canvas.scss
@@ -3,6 +3,7 @@
    -------------------------------------------------- */
 
 $toc-width: 315px !default;
+$support-width: 315px !default;
 
 /* --------------------------------------------------
    Canvas
@@ -19,5 +20,16 @@ $toc-width: 315px !default;
   &.lia-toc--visible {
     left: $toc-width;
     width: calc(100% - #{$toc-width});
+  }
+
+  &.lia-support--visible {
+    right: $support-width;
+    width: calc(100% - #{$support-width});
+  }
+
+  @include breakpoint("m", "max") {
+    &.lia-toc--visible.lia-support--visible {
+      width: calc(100% - #{$toc-width} - #{$support-width});
+    }
   }
 }
