--- a/src/scss/04_objects/_objects.animations.scss
+++ b/src/scss/04_objects/_objects.animations.scss
@@ -5,6 +5,10 @@
   }
 }
 
+.spin {
+  animation: spin;
+}
+
 @keyframes show-comment {
   $left: map-get($global-spacing, spacing-huge) +
     map-get($global-spacing, toc-width);
@@ -18,4 +22,21 @@
     left: $left;
     right: $right;
   }
+}
+
+.show-comment {
+  animation: show-comment;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  animation: fadein 2s;
 }
