--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,53 +1,58 @@
 // Settings
-@import "settings/settings.colors";
-@import "settings/settings.fonts";
-@import "settings/settings.global";
-@import "settings/settings.iconfont";
-@import "settings/settings.typography";
-@import "settings/settings.animations";
+@import "00_settings/settings.colors";
+@import "00_settings/settings.fonts";
+@import "00_settings/settings.global";
+@import "00_settings/settings.iconfont";
+@import "00_settings/settings.typography";
 
 // Tools
-@import "tools/tools.breakpoints";
-@import "tools/tools.color";
-@import "tools/tools.flex";
-@import "tools/tools.font-size";
+@import "01_tools/tools.color";
+@import "01_tools/tools.breakpoints";
+@import "01_tools/tools.flex";
+@import "01_tools/tools.font-size";
 
 // Generic
-@import "generic/generic.reset";
-@import "generic/generic.shared";
+@import "02_generic/generic.reset";
+@import "02_generic/generic.shared";
 
 // Elements
-@import "elements/elements.button";
-@import "elements/elements.code";
-@import "elements/elements.headline";
-@import "elements/elements.input";
-@import "elements/elements.label";
-@import "elements/elements.link";
-@import "elements/elements.page";
-@import "elements/elements.select";
-@import "elements/elements.table";
-@import "elements/elements.text";
-@import "elements/elements.textarea";
+@import "03_elements/elements.button";
+@import "03_elements/elements.code";
+@import "03_elements/elements.headline";
+@import "03_elements/elements.input";
+@import "03_elements/elements.label";
+@import "03_elements/elements.link";
+@import "03_elements/elements.media";
+@import "03_elements/elements.page";
+@import "03_elements/elements.select";
+@import "03_elements/elements.table";
+@import "03_elements/elements.text";
+@import "03_elements/elements.textarea";
 
 // Objects
-@import "objects/object.canvas";
+@import "04_objects/objects.animations";
+@import "04_objects/object.canvas";
 
 // Components
-@import "components/components.accordion";
-@import "components/components.card";
-@import "components/components.dropdown";
-@import "components/components.pagination";
-@import "components/components.quote";
-@import "components/components.script";
-@import "components/components.slide";
-@import "components/components.slide-animation";
-@import "components/components.toolbar";
-@import "components/components.tooltip";
-@import "components/components.toc";
+@import "05_components/components.accordion";
+@import "05_components/components.card";
+@import "05_components/components.dropdown";
+@import "05_components/components.effect-circle";
+@import "05_components/components.header";
+@import "05_components/components.nav";
+@import "05_components/components.pagination";
+@import "05_components/components.quiz";
+@import "05_components/components.quote";
+@import "05_components/components.script";
+@import "05_components/components.slide-animation";
+@import "05_components/components.slide";
+@import "05_components/components.support-menu";
+@import "05_components/components.toc";
+@import "05_components/components.tooltip";
 
 // Utilities
-@import "utilities/utilities.headless";
-@import "utilities/utilities.hidden";
+@import "06_utilities/utilities.headless";
+@import "06_utilities/utilities.hidden";
 
 // Themes
 @import "themes";
